<resources>
    <string name="app_name">NewsMe</string>
    <string name="home_welcome">Welcome to NewsMe</string>
    <string name="home_welcome2">The app that collects timely news just for you!</string>
    <string name="user_name_box">User ID</string>
    <string name="password_box">Password</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="home_page">Home Page</string>
    <string name="menu_title">Menu</string>
    <string name="user_name">test user</string>
    <string name="weather_button">Weather</string>
    <string name="camera_button">Camera</string>
    <string name="weather_report">Weather Report</string>
    <string name="boulder">Boulder</string>
    <string name="houston">Houston</string>
    <string name="other_city">Other City</string>
    <string name="weather_page_choose_city">Choose city:</string>
    <string name="feedback_text">Tell us about your feedback!</string>
    <string name="weather_page_is_good">Weather page is good</string>
    <string name="weather_page_is_bad">Weather page is bad</string>
    <string name="no_answer">I prefer not to answer</string>
    <string name="camera_page_is_good">Camera page is good</string>
    <string name="camera_page_is_bad">Camera page is bad</string>
    <string name="enter_city_name_here">Enter city name here</string>
</resources>