<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/miui12">

    <TextView
        android:id="@+id/home_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/home_page"
        android:textColor="@color/white"
        android:textSize="30sp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <!--   scaleType = centerCrop to zoom the whole image based on center point to fit with the room properly    -->
        <ImageView
            android:id="@+id/user_picture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cat" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:fontFamily="casual"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:background="@color/transparent">

        <Button
            android:id="@+id/home_weather_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_button"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:background="@color/transparent"/>

        <Button
            android:id="@+id/home_camera_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera_button"
            android:layout_marginTop="10dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:background="@color/transparent"/>



    </LinearLayout>




</LinearLayout>